generalSectionFooter.css
	.sectionFooter {
    	background-color: #013715;
		color: white;}

	.sectionFooterContent {
    	margin: 0 10%;}

	.sectionFooterTable {
    	padding: 3.5% 0% 0% 0%;
		
		}

	.sectionFooterTable th {
    	padding: 0% 0% 1% 0%;
		text-align: left;}

	.sectionFooterTable td {
		vertical-align: top;}

	.sectionFooterTable td h1 {
		font-size: 1.5vw;}


	.sectionFooterSocialWrapper {
    	display: flex;
    	flex-direction: column;}
	
	.sectionFooterSocialRow {
    	display: flex;
    	width: 100%;
    	margin-top: auto;
    	padding-top: 2%;}

	.sectionFooterSocialRow a {
    	flex: 1;
    	display: flex;}

	.sectionFooterSocialRow a:first-child {
    	justify-content: flex-start;}

	.sectionFooterSocialRow a:nth-child(2) {
    	justify-content: center;}

	.sectionFooterSocialRow a:last-child {
    	justify-content: flex-end;}

	.sectionFooterSocialRow img {
    	width: 80%;
    	display: block;}

/* PAID FOR BY */
	.sectionPaidForBy {
    	margin-top: -1px;
		background-color: #013715;
		color: white;}

	.sectionPaidForByContent {
    	margin: 0 10%;
		padding: 1.5% 0%;}

	.paidForBy {
		text-align: center;
    	padding: 1%;
		border: none;
		border-radius: 4px;
		box-shadow: inset 0 0 0 2px white;}

/* ANIMATED LINKS WHITE */
	.animatedLinkFooter a {
		position: relative;
		font-family: Times New Roman; 
		color: white; 
		text-decoration: none; 
		font-size: 1.25vw;
		}
	
	.animatedLinkFooter a::after {
		content: "";
    	position: absolute;
    	left: 0;
    	right: 0;
    	bottom: 0px;
    	height: 1.5px;
    	background: white;
    	transform: scaleX(0);
    	transform-origin: center;
    	transition: transform 0.3s ease;}

	.animatedLinkFooter a:hover::after {
		transform: scaleX(1);}

